<resources>
    <string name="app_name">ProtoConf</string>


    <!--Multiple use-->

    <!--Authors-->
    <string name="ClaudiaSosa_name">Claudia Sosa</string>
    <string name="ZacWolf_name">Zac Wolf</string>
    <string name="CristianBuehner_name">Cristian Buehner</string>
    <string name="SigmundMarlraj_name">Sigmund Marlraj</string>
    <string name="CristinaRivers_name">Cristina Rivers</string>



    <!--1st Screen-->

    <!--1st Card -->
    <string name="homepage_1stCard_title">Info ProtoConf 2021</string>
    <string name="homepage_1stCard_DescriptionContent">  Exclusive event for people with expert subscription, 1 day long, Best hotels to stay.</string>

    <!--2nd Card -->
    <string name="homepage_2ndCard_title">How to communicate effectively</string>
    <string name="homepage_2ndCard_DescriptionContent">  Open event for all people, 1 hour long, gifts and special offers to all assistants.</string>

    <!--3rd Card -->
    <string name="homepage_3rdCard_title">How to develop your career</string>
    <string name="homepage_3rdCard_DescriptionContent">  Exclusive event for people with common subscription benefits, 1 hour long, all assistants will receive special offers and traveling promotions.</string>


    <!--2nd Screen-->

    <!--1st Item-->
    <string name="scheduleItem_1stItem_Topic">How to communicate effectively</string>
    <string name="scheduleItem_1stItem_author">Claudia Sosa</string>
    <string name="scheduleItem_1stItem_hour">10:30 AM</string>

    <!--2nd Item-->
    <string name="scheduleItem_2ndItem_Topic">How to develop your career</string>
    <string name="scheduleItem_2ndItem_author">Zac Wolf</string>
    <string name="scheduleItem_2ndItem_hour">11:30 AM</string>

    <!--3rd Item-->
    <string name="scheduleItem_3rdItem_Topic">How to make your bussines grow</string>
    <string name="scheduleItem_3rdItem_author">Sigmund Marlraj</string>
    <string name="scheduleItem_3rdItem_hour">1:00 PM</string>


    <!--4th Item-->
    <string name="scheduleItem_4thItem_Topic">How to overcome a recession</string>
    <string name="scheduleItem_4thItem_author">Cristina Rivers</string>
    <string name="scheduleItem_4thItem_hour">2:00 PM</string>


    <!--5th Item-->
    <string name="scheduleItem_5thItem_Topic">Manage your time</string>
    <string name="scheduleItem_5thItem_author">Cristian Buehner</string>
    <string name="scheduleItem_5thItem_hour">4:30 PM</string>

    <!--Detail Screen-->

    <!--conference descriptions-->
    <string name="scheduleDetail_1stAuthor_ClaudiaSosa_description">Here you will learn how to improve your communication skills, how to practice and perform at a very high level public speechs and how to focus and manage emotions regarding to communication situations</string>


</resources>
